apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: demo-app
    app.kubernetes.io/component: routing
spec:
  rules:
    - host: demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5678
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
